<resources>
    <string name="app_name">Tempus</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Tempus</string>
    <string name="nav_header_subtitle">Multi-Person Hours Tracking</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Menu items -->
    <string name="menu_home">Timesheets</string>
    <string name="menu_summary">Summary</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_qrcode">QR Codes</string>
    <string name="menu_actions">Actions</string>
    <string name="menu_reset">Reset All Data</string>
    
    <!-- Employee types -->
    <string name="type_staff">Staff</string>
    <string name="type_temp">Temporary</string>
    <string name="type_contractor">Contractor</string>
    <string name="type_manager">Manager</string>
    
    <!-- Actions -->
    <string name="action_add_employee">Add Employee</string>
    <string name="action_clock_in">Clock In</string>
    <string name="action_clock_out">Clock Out</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_view_time_entries">View Time Entries</string>
    <string name="action_add_time_entry">Add Time Entry</string>
    <string name="action_edit_time_entry">Edit Time Entry</string>
    <string name="action_show_time_entries">Show Time Entries</string>
    <string name="action_hide_time_entries">Hide Time Entries</string>
    
    <!-- Dialog messages -->
    <string name="dialog_add_employee">Add New Employee</string>
    <string name="dialog_edit_employee">Edit Employee</string>
    <string name="dialog_clock_out">Clock Out</string>
    <string name="dialog_reset_confirm">Are you sure you want to reset all data? This action cannot be undone.</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_time_entries">Time Entries</string>
    <string name="dialog_add_time_entry">Add Time Entry</string>
    <string name="dialog_edit_time_entry">Edit Time Entry</string>
    
    <!-- Labels -->
    <string name="label_name">Name</string>
    <string name="label_type">Employee Type</string>
    <string name="label_break_time">Break Time (minutes)</string>
    <string name="label_clock_in">Clocked In</string>
    <string name="label_clock_out">Clocked Out</string>
    <string name="label_date">Date</string>
    <string name="label_total_hours">Total Hours</string>
    <string name="label_no_employees">No employees added yet</string>
    <string name="label_no_time_entries">No time entries yet</string>
    <string name="label_time_entries_for">Time Entries for %s</string>
    <string name="label_in">In: %s</string>
    <string name="label_out">Out: %s</string>
    <string name="label_not_clocked_out">Not clocked out</string>
    <string name="label_break">Break: %d min</string>
    <string name="label_hours">Hours: %.2f</string>
    <string name="label_clock_in_time">Clock-in Time</string>
    <string name="label_clock_out_time">Clock-out Time</string>
    <string name="label_timesheet_details">Timesheet Details</string>
    <string name="label_expand_collapse">Show/Hide Time Entries</string>
    <string name="label_time_entry_date">Date: %s</string>
    <string name="label_time_entry_hours">Hours: %s</string>
    <string name="label_clock_in_out">%s to %s</string>
    
    <!-- QR Code -->
    <string name="qr_code_title">QR Code Generator</string>
    <string name="qr_code_employee">Employee Info</string>
    <string name="qr_code_time_entry">Time Entry</string>
    <string name="qr_code_summary">Summary</string>
    <string name="qr_code_select_employee">Select Employee:</string>
    <string name="qr_code_select_type">QR Code Type:</string>
    <string name="qr_code_select_time_entry">Select Time Entry:</string>
    <string name="qr_code_no_employees">No employees found. Add employees first to generate QR codes.</string>
    <string name="qr_code_generation_error">Could not generate QR code. Please check your selections.</string>
    <string name="qr_code_description">This QR code can be scanned to access the selected information.</string>
    
    <!-- QR Scanner -->
    <string name="scan_qr_instruction">Position the QR code within the frame to scan</string>
    <string name="action_close">Close</string>
    <string name="action_scan_again">Scan Again</string>
    <string name="scan_success">Successfully scanned</string>
    <string name="scan_error">Error scanning QR code</string>
    <string name="scan_ready">Ready to scan</string>
    <string name="scan_qr_code">Scan QR Code</string>
</resources>