<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_timesheet"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_summary"
            android:icon="@drawable/ic_chart"
            android:title="@string/menu_summary" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_qrcode"
            android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/menu_qrcode" />
    </group>
    
    <item android:title="@string/menu_actions">
        <menu>
            <item
                android:id="@+id/nav_reset"
                android:icon="@android:drawable/ic_menu_delete"
                android:title="@string/menu_reset" />
        </menu>
    </item>
</menu>